PackageManager: allow build-time disabling of components
Allow components to be specified as disabled at build time
(applied on boot).

This allows stock OTA components to be marked as disabled in
CM builds.

Change-Id: I6e4499cc40a779792a5ea97a10137399dad7d69f

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2306,5 +2306,9 @@
   <java-symbol type="bool" name="config_wifiApFirmwareReload" />
   
    <!-- Samsung STK Support -->
-+  <java-symbol type="bool" name="config_samsung_stk" />
+  <java-symbol type="bool" name="config_samsung_stk" />
+
+  <!-- Package Manager -->
+  <java-symbol type="array" name="config_disabledComponents" />
+
 </resources>
