Forward port Samsung STK support (frameworks/base)
[pawitp: port to Lollipop]

Change-Id: I08d169bc466df290fca838b09f6b0fbea2ac82a8

Conflicts:
	core/res/res/values/slim_symbols.xml

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2304,4 +2304,7 @@
   <java-symbol type="integer" name="config_LTE_RSRP_threshold_type" />
 
   <java-symbol type="bool" name="config_wifiApFirmwareReload" />
+  
+   <!-- Samsung STK Support -->
++  <java-symbol type="bool" name="config_samsung_stk" />
 </resources>
